maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:27: error: '(' expected but identifier found.
    if murDroite() {
       ^Escaper:38: error: illegal start of simple expression
  }
  ^